--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "cookie-parser": "^1.4.5",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.13.1",
     "request": "^2.88.2"
   },
   "scripts": {
