--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "enzyme-to-json": "^3.5.0",
     "express": "^4.17.1",
+    "mockdate": "^3.0.2",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
